# a-rs-jsonrpc

./: Cargo.toml  LICENSE  README.md
examples/: arith.rs  echo.rs  unit.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: client.rs  error.rs  id.rs  lib.rs  request.rs  response.rs  service.rs
tests/: client_test.rs
