[package]
name = "a-rs-jsonrpc"
version = "0.1.0"
edition = "2024"
authors = ["Wang Ying <yingge.gzb@gmail.com>"]
description = "A battery-included JSON-RPC framework for Rust"
license = "MIT"
repository = "https://github.com/wangyingsm/a-rs-jsonrpc"

[dependencies]
async-trait = "0.1.89"
darling = "0.23.0"
proc-macro2 = "1.0.105"
quote = "1.0.43"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.114", features = ["full"] }
thiserror = "2.0.17"

proc-macros = { path = "proc-macros" }
tracing = "0.1.44"
futures = "0.3.31"
linkme = "0.3.35"
serde_with = "3.16.1"

[dev-dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
